[package]
name = "uqoin-client"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
clap = { version = "4.5.32", features = ["derive"] }
finitelib = { version = "0.1.11", features = ["serde"] }
rand = "0.9.0"
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uqoin-core = { path = "../uqoin-core" }
