[package]
name = "uqoin-client"
version = "0.1.3"
edition = "2024"
authors = ["Alexander Fomalhaut <alexfomalhaut@gmail.com>"]
description = "CLI tool for Uqoin network access and coin mining."
readme = "README.md"
homepage = "https://github.com/fomalhaut88/uqoin-client"
repository = "https://github.com/fomalhaut88/uqoin-client"
keywords = ["uqoin", "blockchain", "cryptocurrency", "cli", "wallet", "miner"]

[dependencies]
aes = "0.8.4"
clap = { version = "4.5.32", features = ["derive"] }
finitelib = { version = "0.1.13", features = ["serde"] }
home = "0.5.11"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uqoin-core = "0.1.3"
